  future releases, ad that's why intra-segment slicing is not enabled by default, but leveraged in tests when the
  searcher is created via LuceneTestCase#newSearcher. Users may override IndexSearcher#slices(List) to optionally
  create slices that target segment partitions. (Luca Cavanna)

Improvements
---------------------

* GITHUB#13246: Simplify bytes comparison as long comparison in NumericComparator. (Guo feng)

* LUCENE-10416: Update Korean Dictionary to mecab-ko-dic-2.1.1-20180720 for Nori.
  (Uihyun Kim)

* LUCENE-10614: Properly support getTopChildren in RangeFacetCounts. (Yuting Gan)

* LUCENE-10652: Add a top-n range faceting example to RangeFacetsExample. (Yuting Gan)

* GITHUB#12447: Hunspell: speed up the dictionary enumeration on suggestion (Peter Gromov)

* GITHUB#12873: Expressions module now uses JEP 371 "Hidden Classes" with JEP 309
  "Dynamic Class-File Constants" to implement Javascript expressions. (Uwe Schindler)

* GITHUB#11657, LUCENE-10621: Upgrade to OpenNLP 2.3.2. (Christine Poerschke, Eric Pugh)

* GITHUB#13209: Upgrade snowball to 26db1ab9. (Robert Muir)

* GITHUB#12172: Update Romanian stopwords list to include the modern unicode forms.  (Trey Jones)

* GITHUB#13707: Improve Operations.isTotal() to work with non-minimal automata. (Dawid Weiss, Robert Muir)

Optimizations
---------------------

* GITHUB#11857, GITHUB#11859, GITHUB#11893, GITHUB#11909: Hunspell: improved suggestion performance (Peter Gromov)

* GITHUB#12825, GITHUB#12834: Hunspell: improved dictionary loading performance, allowed in-memory entry sorting.
  (Peter Gromov)

* GITHUB#12372: Reduce allocation during HNSW construction (Jonathan Ellis)

* GITHUB#12552: Make FSTPostingsFormat load FSTs off-heap. (Tony X)

* GITHUB#13672: Leverage doc value skip lists in DocValuesRewriteMethod if indexed. (Greg Miller)

Bug Fixes
---------------------

* LUCENE-10599: LogMergePolicy is more likely to keep merging segments until